# Familias-py

./: .gitignore  README.md  pyproject.toml
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  apiClient.ts  main.tsx  styles.css
frontend/src/components/: CaseIO.tsx  LocusGrid.tsx  ParamsBar.tsx  RelationsGrid.tsx  ResultsFooter.tsx
frontend/src/pages/: ArbitraryPage.tsx  HomePage.tsx  OneParentPage.tsx  TwoParentPage.tsx
frontend/src/state/: caseState.ts  useModeCase.ts
src/familias/: __init__.py  _data.py  _register.py  locus.py  pedigree.py  plot.py  posterior.py  prior.py
src/familias/_engine/: __init__.py  allele_system.py  family.py  interface.py  pater.py  pedigree_core.py  pedigree_list.py  peeling.py  special.py
src/familias/data/: fsi.json  norwegian_frequencies.json
src/familias/tui/: __init__.py  app.py  compute.py  defaults.py  freq_loader.py  widgets.py
src/familias/web/: __init__.py  __main__.py  app.py  compute_api.py  models.py
tests/: test_correctness.py  test_engine_parity.py  test_paternity.py  test_tui.py  test_web_api.py  test_web_static.py
