[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "familias"
version = "2.6.4"
description = "Probabilities for pedigrees given DNA data (Python port of the R package 'Familias')"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
authors = [
    { name = "Petter Mostad" },
    { name = "Thore Egeland" },
    { name = "Franco Marsico" },
    { name = "Ivar Simonsson" }
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.4", "networkx>=2.6"]
test = ["pytest>=7"]
tui  = ["textual>=0.60", "pandas>=1.3"]
rda  = ["pyreadr>=0.4"]

[project.scripts]
familias-tui = "familias.tui.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
familias = ["data/*.json"]
