[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "familias"
version = "2.6.4"
description = "Probabilities for pedigrees given DNA data (Python port of the R package 'Familias')"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
authors = [
    { name = "Petter Mostad" },
    { name = "Thore Egeland" },
    { name = "Franco Marsico" },
    { name = "Ivar Simonsson" }
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.4", "networkx>=2.6"]
test = ["pytest>=7", "httpx>=0.27"]
tui  = ["textual>=0.60", "pandas>=1.3"]
rda  = ["pyreadr>=0.4"]
web  = ["fastapi>=0.110", "uvicorn[standard]>=0.27", "pydantic>=2", "pandas>=1.3"]

[project.scripts]
familias-tui = "familias.tui.app:main"
familias-web = "familias.web.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
familias = ["data/*.json", "web/dist/**/*", "web/dist/index.html"]
